<resources>
    <string name="app_name">MultiRadioGroup</string>
    <string name="action_settings">Settings</string>
    <string name="random_one_txt">任选一</string>
    <string name="random_two_txt">任选二</string>
    <string name="random_three_txt">任选三</string>
    <string name="random_four_txt">任选四</string>
    <string name="random_five_txt">任选五</string>
    <string name="random_six_txt">任选六</string>
    <string name="random_seven_txt">任选七</string>
    <string name="random_eight_txt">任选八</string>
</resources>
